update neofetch gentoo

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -2,11 +2,10 @@ print_info() {
     info title
     info underline
 
-    info "Host" model
     info "$(color 7)OS" distro
-    info "$(color 3)├$(color 2) Kernal " kernel
+    info "$(color 3)├$(color 2) Kernel " kernel
     info "$(color 3)├$(color 2) Uptime " uptime
-    info "$(color 3)└$(color 2) package" packages
+    info "$(color 3)└$(color 2) Packages " packages
 
     prin
 
@@ -18,17 +17,17 @@ print_info() {
 
     prin
 
-    info "$(color 7)WM" wm
+    prin "$(color 7)WM" "i3-gaps"
     prin "$(color 3)├$(color 5) BAR " "Bumblebee Status"
     prin "$(color 3)└$(color 5) COMP" "picom"
 
     prin
 
-    info "$(color 15)TTY" term
+    prin "$(color 15)TTY" "simple terminal"
     info "$(color 3)├$(color 9) TERM" shell
     prin "$(color 3)└$(color 9) FONT" "Noto Sans the best!!!"
 
     prin
 
-    prin "$(color 3) I use Arch, Btw."
+    prin "$(color 3) i now use gentoo, btw."
 }
