--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -2,7 +2,7 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 13.0;
+corner-radius = 14.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
@@ -179,17 +179,20 @@ focus-exclude = [
 opacity-rule = [
   "80:class_g     = 'Bar'",             # lemonbar
   "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
+  "100:class_g    = 'XTerm'",	
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
+  "100:class_g    = 'mpv'",
   "80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
   "70:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
-  "100:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'"
+  "100:class_g    = 'IceCat'",
+  "100:class_g	  = 'discord'",
+  "100:class_g    = 'Spotify'",
+  "100:class_g    = 'Steam'",
+  "100:class_g    = 'libreoffice-writer'"
 ];
 
 
@@ -234,7 +237,7 @@ blur-kern = "3x3box";
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
+  method = "dual_kawase";
   #method = "kernel";
   strength = 7;
   # deviation = 1.0;
