current title in bumblebee status

--- a/i3-gaps/config
+++ b/i3-gaps/config
@@ -171,10 +171,10 @@ bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
+        # Pressing left will shrink the windowâ€™s width.
+        # Pressing right will grow the windowâ€™s width.
+        # Pressing up will shrink the windowâ€™s height.
+        # Pressing down will grow the windowâ€™s height.
         bindsym $left       resize shrink width 10 px or 10 ppt
         bindsym $down       resize grow height 10 px or 10 ppt
         bindsym $up         resize shrink height 10 px or 10 ppt
@@ -198,7 +198,7 @@ bindsym Mod1+r mode "resize"
 # finds out, if available)
 bar {
 	status_command /usr/bin/bumblebee-status \
-		-m cpu memory time date spotify kernel pasink pasource \
+		-m title cpu memory time date spotify kernel pasink pasource \
 		-p time.format="%H:%M" \
 		-p date.locale \
 		-t nord-powerline
