--- a/i3-gaps/config
+++ b/i3-gaps/config
@@ -53,7 +53,7 @@ set $right semicolon
 floating_modifier Mod1
 
 # start a terminal
-bindsym Mod1+Return exec st
+bindsym Mod1+Return exec alacritty
 
 # kill focused window
 bindsym Mod1+q kill
@@ -171,10 +171,10 @@ bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the windowâ€™s width.
-        # Pressing right will grow the windowâ€™s width.
-        # Pressing up will shrink the windowâ€™s height.
-        # Pressing down will grow the windowâ€™s height.
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
         bindsym $left       resize shrink width 10 px or 10 ppt
         bindsym $down       resize grow height 10 px or 10 ppt
         bindsym $up         resize shrink height 10 px or 10 ppt
@@ -196,25 +196,25 @@ bindsym Mod1+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-	status_command /usr/bin/bumblebee-status \
-		-m title cpu memory time date spotify kernel pasink pasource \
-		-p time.format="%H:%M" \
-		-p date.locale \
-		-t nord-powerline
-	position top
-colors {
-	background #2e3440
-        statusline #ffffff
-        separator #666666
-
-        focused_workspace  #b48ead #b48ead #ffffff
-        active_workspace   #8fbcbb #8fbcbb #ffffff
-        inactive_workspace #8fbcbb #8fbcbb #888888
-        urgent_workspace   #2f343a #900000 #ffffff
-        binding_mode       #2f343a #900000 #ffffff
-    }
-}
+#bar {
+#	status_command /usr/bin/bumblebee-status \
+#		-m title cpu memory time date spotify kernel pasink pasource \
+#		-p time.format="%H:%M" \
+#		-p date.locale \
+#-t nord-powerline
+#	position top
+#colors {
+#	background #2e3440
+#        statusline #ffffff
+#        separator #666666
+#
+#        focused_workspace  #b48ead #b48ead #ffffff
+#        active_workspace   #8fbcbb #8fbcbb #ffffff
+#        inactive_workspace #8fbcbb #8fbcbb #888888
+#        urgent_workspace   #2f343a #900000 #ffffff
+#        binding_mode       #2f343a #900000 #ffffff
+#    }
+#}
 
 # class                 border  backgr. text    indicator child_border
 client.focused          #2e3440 #2e3440 #2e3440 #2e3440   #2e3440
@@ -241,3 +241,4 @@ exec xrandr --output HDMI-A-0 --auto --left-of DisplayPort-0
 exec_always nitrogen --restore
 gaps inner 10
 gaps outer 10
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
