--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -186,8 +186,8 @@ opacity-rule = [
   "80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
+  "100:class_g     = 'monolith-code'",
+  "100:class_g     = 'LBRY'",
   "100:class_g    = 'IceCat'",
   "100:class_g	  = 'discord'",
   "100:class_g    = 'Spotify'",
